<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/timer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/timeLeft"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffb73d"
            android:layout_weight="1.0"
            android:text="@string/B1"
            android:contentDescription="@string/B1"
            android:onClick="onClick1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5aff50"
            android:layout_weight="1.0"
            android:text="@string/B2"
            android:contentDescription="@string/B2"
            android:onClick="onClick2"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:contentDescription="@string/Question"
        android:background="@android:color/white"
        android:id="@+id/questionBox">
        <TextView android:id="@+id/questionText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/Question"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#49caff"
            android:layout_weight="1.0"
            android:text="@string/B3"
            android:contentDescription="@string/B3"
            android:onClick="onClick3"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff5056"
            android:layout_weight="1.0"
            android:text="@string/B4"
            android:contentDescription="@string/B4"

            android:onClick="onClick4"/>

    </LinearLayout>

</LinearLayout>