<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/difficultyTable"
    tools:context=".GooglePlayServicesActivity">
    <ListView
        android:id="@+id/diffListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/buttD1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffa742"
            android:layout_weight="1"
            android:text="@string/Diff1"
            android:contentDescription="@string/Diff1"
            android:onClick="diff1"/>
        <Button
            android:id="@+id/buttD2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#04ffea"
            android:layout_weight="1"
            android:text="@string/Diff2"
            android:contentDescription="@string/Diff2"
            android:onClick="diff2"/>
        <Button
            android:id="@+id/buttD3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#0081ff"
            android:layout_weight="1"
            android:text="@string/Diff3"
            android:contentDescription="@string/Diff3"
            android:onClick="diff3"/>
        <Button
            android:id="@+id/buttD4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#1af03d"
            android:layout_weight="1"
            android:text="@string/Diff4"
            android:contentDescription="@string/Diff4"
            android:onClick="diff4"/>
        <Button
            android:id="@+id/buttD5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#f31bff"
            android:layout_weight="1"
            android:text="@string/Diff5"
            android:contentDescription="@string/Diff5"
            android:onClick="diff5"/>
        <Button
            android:id="@+id/buttD6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#fffe2f"
            android:layout_weight="1"
            android:text="@string/Diff6"
            android:contentDescription="@string/Diff6"
            android:onClick="diff6"/>
        <Button
            android:id="@+id/buttD7"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ff4347"
            android:layout_weight="1"
            android:text="@string/Diff7"
            android:contentDescription="@string/Diff7"
            android:onClick="diff7"/>
        <TableRow
            android:id="@+id/difficulty1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textResult"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Diff2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:typeface="normal" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"></TableRow>
    </ListView>
</FrameLayout>